--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href="./css/style.css" type="text/css" rel="stylesheet"/>
         
         <script src="./js/jquery.min.js" type="text/javascript"></script>
+        <script src="./js/screenfull.min.js" type="text/javascript"></script>
         <script src="./js/common.js" type="text/javascript"></script>
         <script src="./js/fullpage.js" type="text/javascript"></script>
         <script src="./js/popup.js" type="text/javascript"></script>
