--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="./css/default.css" type="text/css" rel="stylesheet"/>
         <link href="./css/include.css" type="text/css" rel="stylesheet"/>
         <link href="./css/style.css" type="text/css" rel="stylesheet"/>
-<!--        <link href="./css/media.css" type="text/css" rel="stylesheet"/>-->
+        <link href="./css/media.css" type="text/css" rel="stylesheet"/>
         
         <script src="./js/jquery.min.js" type="text/javascript"></script>
         <script src="./js/screenfull.min.js" type="text/javascript"></script>
