--- a/index.html
+++ b/index.html
@@ -35,12 +35,9 @@
         <script data-cfasync="false" type="text/javascript" src="./js/form-submission-handler.js"></script>
     </head>
     <body>
-<!--
-        <div id="section_loading">
-            <div class="left_circle circle"></div>
-            <div class="right_circle circle"></div>
-        </div>
--->
+        <script type="text/javascript">
+            resource_loading();
+        </script>
         <div id="wrap">
             <header id="header">
                 <nav class="gnb">
