--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     </head>
     <body>
         <script type="text/javascript">
-            resource_loading();
+//            resource_loading();
+            make_loading();
         </script>
         <div id="wrap">
             <header id="header">
