--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="ko">
     <head>
         <meta charset="utf-8"/>
-        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
-        
+        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width"/>
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
         <title>Portfolio</title>
         
         <link href="./font/fonts.css" type="text/css" rel="stylesheet"/>
