--- a/index.html
+++ b/index.html
@@ -25,24 +25,12 @@
         <script src="./js/slider.js" type="text/javascript"></script>
         <script src="./js/map.js" type="text/javascript"></script>
         <script src="./js/include.js" type="text/javascript"></script>
-		
-        <script type="text/javascript">
-            $(document).ready(function(){
-                page_move(0);
-                $(".button_profile").click(function() {
-                    $.get("./meta/popup_about.xml", function(data) {
-                        var meta = $(data);
-                        popup(data);
-                    });
-                })
-            })
-        </script>
         <script data-cfasync="false" type="text/javascript" src="./js/form-submission-handler.js"></script>
     </head>
     <body>
         <script type="text/javascript">
 //            resource_loading();
-            make_loading();
+            make_loading("body", true,0.12,0.015, "Now Loading..");
         </script>
         <div id="wrap">
             <header id="header">
@@ -145,7 +133,7 @@
                             <p>E-mail</p>
                             <input type="text" name="email" autocomplete=off><br>
                             <p>Comment</p>
-                            <textarea name="comment" rows="4" cols="50" autocomplete=off></textarea>
+                            <textarea name="comment" rows="2" cols="50" autocomplete=off></textarea>
                             <input type="submit" value="Send">
                         </form>
                     </div>
