--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <body>
         <script type="text/javascript">
 //            resource_loading();
-            make_loading("body", true,0.12,0.015, "Now Loading..");
+            make_loading($("body"), true, 0.12, 0.015, "#1c2e5f", "#fff", "Now Loading..");
         </script>
         <div id="wrap">
             <header id="header">
