--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width, minimal-ui"/>
 <!--        <meta name="mobile-web-app-capable" content="yes">-->
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<!--        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">-->
 
         <title>Portfolio</title>
         
