--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
             <div id="section_05" class="fullpage">
                 <div class="video_wrap">
-                    <video muted autoplay loop playsinline webkit-playsinline>
+                    <video defaultMuted muted autoplay loop playsinline webkit-playsinline>
                         <source src="./video/rocket.mp4" type="video/mp4"/>
                     </video>
                 </div>
