--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body>
         <script type="text/javascript">
 //            resource_loading();
-            make_loading($("body"), true, 0.12, 0.015, "#1c2e5f", "#fff", "Now Loading..");
+            loading($("body"), true, 0.12, 0.015, "#1c2e5f", "#fff", "Now Loading..");
         </script>
         <div id="wrap">
             <header id="header">
