--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <script src="./js/jquery.min.js" type="text/javascript"></script>
         <script src="./js/screenfull.min.js" type="text/javascript"></script>
         <script src="./js/common.js" type="text/javascript"></script>
+        <!--[if lte IE 8]>
+            <script type="text/javascript">
+                IS_LWE_IE8 = true;
+            </script>
+        <![endif]-->
         <script src="./js/fullpage.js" type="text/javascript"></script>
         <script src="./js/popup.js" type="text/javascript"></script>
         <script src="./js/slider.js" type="text/javascript"></script>
