--- a/index.html
+++ b/index.html
@@ -15,20 +15,37 @@
         <link href="./css/style.css" type="text/css" rel="stylesheet"/>
         <link href="./css/media.css" type="text/css" rel="stylesheet"/>
         
-        <script src="./js/jquery.min.js" type="text/javascript"></script>
-        <script src="./js/screenfull.min.js" type="text/javascript"></script>
-        <script src="./js/common.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            var IS_LWE_IE8 = false;
+        </script>
         <!--[if lte IE 8]>
             <script type="text/javascript">
                 IS_LWE_IE8 = true;
             </script>
         <![endif]-->
+        <![if !IE]>
+            <script src="./js/jquery.min.js" type="text/javascript"></script>
+            <script src="./js/screenfull.min.js" type="text/javascript"></script>
+            <script src="./js/common.js" type="text/javascript"></script>
+            <script src="./js/fullpage.js" type="text/javascript"></script>
+            <script src="./js/popup.js" type="text/javascript"></script>
+            <script src="./js/slider.js" type="text/javascript"></script>
+            <script src="./js/map.js" type="text/javascript"></script>
+            <script src="./js/include.js" type="text/javascript"></script>
+            <script data-cfasync="false" type="text/javascript" src="./js/form-submission-handler.js"></script>
+        <![endif]>
+        
+<!--
+        <script src="./js/jquery.min.js" type="text/javascript"></script>
+        <script src="./js/screenfull.min.js" type="text/javascript"></script>
+        <script src="./js/common.js" type="text/javascript"></script>
         <script src="./js/fullpage.js" type="text/javascript"></script>
         <script src="./js/popup.js" type="text/javascript"></script>
         <script src="./js/slider.js" type="text/javascript"></script>
         <script src="./js/map.js" type="text/javascript"></script>
         <script src="./js/include.js" type="text/javascript"></script>
         <script data-cfasync="false" type="text/javascript" src="./js/form-submission-handler.js"></script>
+-->
     </head>
     <body>
         <script type="text/javascript">
