--- a/index.html
+++ b/index.html
@@ -20,9 +20,21 @@
         <script type="text/javascript">
             var IS_LWE_IE8 = false;
         </script>
+        <script type="text/javascript">
+            IS_LWE_IE8 = true;
+            var jq = document.createElement("script");
+            jq.type = "text/javascript";
+            jq.onreadystatechange= function () {
+                if (script.readyState == "loaded" || script.readyState == "complete"){
+                }
+            };
+            jq.src = "./js/warning.js";
+            document.getElementsByTagName("head")[0].appendChild(jq);
+        </script>
         <!--[if lte IE 8]>
             <script src="./js/warning.js" type="text/javascript"></script>
         <![endif]-->
+<!--
         <![if gt IE 8]>
             <script src="./js/jquery.min.js" type="text/javascript"></script>
             <script src="./js/screenfull.min.js" type="text/javascript"></script>
@@ -34,6 +46,7 @@
             <script src="./js/include.js" type="text/javascript"></script>
             <script data-cfasync="false" type="text/javascript" src="./js/form-submission-handler.js"></script>
         <![endif]>
+-->
     </head>
     <body>
         <script type="text/javascript">
