--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta property="og:title" content="안성희의 포트폴리오"/>
+        <meta property="og:image" content="https://hongkong-pig.github.io/portfolio/images/profile.png"/>
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width, minimal-ui"/>
 <!--        <meta name="mobile-web-app-capable" content="yes">-->
         <meta name="apple-mobile-web-app-capable" content="yes">
