--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <script type="text/javascript">
             var IS_LWE_IE8 = false;
         </script>
-        <!--[if lte IE 8]>
+        
+<!--
             <script type="text/javascript">
                 IS_LWE_IE8 = true;
                 var script = document.createElement("script");
@@ -34,6 +35,9 @@
                 script.src = "./js/warning.js";
                 document.getElementsByTagName("head")[0].appendChild(script);
             </script>
+-->
+        <!--[if lte IE 8]>
+            <script src="./js/warning.js" type="text/javascript"></script>
         <![endif]-->
         <![if gt IE 8]>
             <script src="./js/jquery.min.js" type="text/javascript"></script>
