--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             </script>
 -->
         <!--[if lte IE 8]>
-            <script src="./js/warning.js" type="text/javascript"></script>
+            <script type="text/javascript">
+                IS_LWE_IE8 = true;
+            </script>
         <![endif]-->
         <![if gt IE 8]>
             <script src="./js/jquery.min.js" type="text/javascript"></script>
@@ -53,7 +55,6 @@
     </head>
     <body>
         <script type="text/javascript">
-//            resource_loading();
             if(!IS_LWE_IE8){
                 loading($("body"), true, 0.12, 0.015, "#1c2e5f", "#fff", "Now Loading..");
             }
@@ -168,4 +169,7 @@
             <footer id="footer">Copyright 2018. AN SEONGHEE all rights reserved.</footer>
         </div>
     </body>
+    <!--[if lte IE 8]>
+        <script src="./js/warning.js" type="text/javascript"></script>
+    <![endif]-->
 </html>
