--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 loading($("body"), true, 0.12, 0.015, "#1c2e5f", "#fff", "Now Loading..");
             }
         </script>
-        <div id="wrap">
+        <div id="wrap" style="opacity: 0;">
             <header id="header">
                 <nav class="gnb">
                     <h1 id="home"></h1>
