add vertical view

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <script type="text/javascript">
             var IS_LWE_IE8 = false;
         </script>
-        
 <!--
             <script type="text/javascript">
                 IS_LWE_IE8 = true;
@@ -58,7 +57,8 @@
             }
         </script>
         <div id="wrap" style="opacity: 0;">
-            <header id="header">
+            <div id="button_gnb" class="is_portrait"></div>
+            <header id="header" class="is_landscape">
                 <nav class="gnb">
                     <h1 id="home"></h1>
                     <ul class="fullpage_navigation">
@@ -86,6 +86,7 @@
                         <img src="./images/background.png"/>
                     </div>
                 </div>
+                <img class="icon_down" src="./images/icon_down.png"/>
             </div>
             <div id="section_02" class="fullpage">
                 <div class="content_wrap">
