Apply page down button

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <img src="./images/background.png"/>
                     </div>
                 </div>
-                <img class="icon_down" src="./images/icon_down.png"/>
+                <img class="icon_down" onclick="page_down()" src="./images/icon_down.png"/>
             </div>
             <div id="section_02" class="fullpage">
                 <div class="content_wrap">
